App/node_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  namespace: holy-namespace
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: registry.gitlab.au.dk/swwao/demo-projs/typescript-mongodb-crud:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: registry-credentials
