App/order_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: holy-namespace
  labels:
    app: Orders
spec:
  replicas: 3
  selector:
    matchLabels:
      app: Orders
  template:
    metadata:
      labels:
        app: Orders
    spec:
      containers:
      - name: orders-container
        image: registry.gitlab.au.dk/wao-exercises1/ex_4  # Update with your GitLab image URL
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: registry-credentials  # Ensure this matches your Docker registry secret
