App/node_service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: holy-namespace
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
